--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -1,6 +1,6 @@
 index:
     path: /
-    controller: App\Controller\DefaultController::index
+    controller: App\Controller\ExampleController::index
 
 metrics:
     resource: '@ChaseIsabellePHPromBundle/Resources/config/routes.xml'
