--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -39,7 +39,7 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "chaseisabelle/phprom-bundle": "*",
+    "chaseisabelle/phprom-bundle": "dev-http-impl",
     "symfony/console": "5.1.*",
     "symfony/dotenv": "5.1.*",
     "symfony/flex": "^1.3.1",
