--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 ###< symfony/framework-bundle ###
 
 /.idea/
-/bundles/
 
 # add any extra files you wish to leave out of the repo
-/symfony/config/packages/vestiaire_prometheus.yaml
+/symfony/composer.lock
