--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,21 +1,22 @@
 global:
-  scrape_interval: 15s
-  scrape_timeout: 10s
-  evaluation_interval: 15s
+  scrape_interval: 5s
+  scrape_timeout: 5s
+  evaluation_interval: 5s
 alerting:
   alertmanagers:
     - static_configs:
         - targets: []
       scheme: http
-      timeout: 10s
+      timeout: 5s
       api_version: v1
 scrape_configs:
   - job_name: prometheus
     honor_timestamps: true
-    scrape_interval: 15s
-    scrape_timeout: 10s
+    scrape_interval: 5s
+    scrape_timeout: 5s
     metrics_path: /metrics
     scheme: http
     static_configs:
       - targets:
-          - symfony
+          - symfony-grpc
+          - symfony-rest:8080
