--- a/symfony-rest/composer.json
+++ b/symfony-rest/composer.json
@@ -39,14 +39,12 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "chaseisabelle/phprom-bundle": "*",
+    "chaseisabelle/phprom-bundle": ">=0.0.6",
     "symfony/console": "5.1.*",
     "symfony/dotenv": "5.1.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.1.*",
     "symfony/yaml": "5.1.*"
-  },
-  "require-dev": {
   },
   "scripts": {
     "auto-scripts": {
